[package]
name = "leaf-dns"
version = "0.2.1"
edition = "2024"
description = "Authoritative DNS server for nip.io-style hostnames"
license = "Apache-2.0"

[lib]
name = "leaf"
path = "src/lib.rs"

[[bin]]
name = "leaf"
path = "src/main.rs"

[dependencies]
hickory-proto = "0.25"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
toml = "0.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
